missions are ok

--- a/biscuits/src/main/biscuits-ui/src/app/kids/kid-details/kid-details.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/kids/kid-details/kid-details.component.html
@@ -1,4 +1,4 @@
-<div class="card large">
+<!-- <div class="card large"> -->
   <div class="card-content">
     <div class="media">
       <div class="media-left">
@@ -14,7 +14,7 @@
         <button class="button is-primary" (click)="toggleEdit()"><span class="icon"><fa-icon [icon]="faEdit"></fa-icon></span></button>
       </div>
     </div>
-  </div>
+<!--   </div> -->
 </div>
 
 <div [ngClass]="{'is-active': isEditToggled}" class="modal">
