--- a/biscuits/src/main/biscuits-ui/src/app/header/header.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/header/header.component.html
@@ -15,14 +15,14 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="field is-grouped">
-            <p class="control">
+<!--             <p class="control">
                 <a class="button is-dark" (click)="translate('fr')">
                   <span class="icon">
                     <fa-icon [icon]="faSignOutAlt"></fa-icon>
                   </span>
                   <span>Translate</span>
                 </a>
-              </p>
+              </p> -->
           <p class="control" *ngIf="!isSignedIn">
             <a class="button is-dark" routerLink="sign-up">
               <span class="icon">
@@ -66,14 +66,14 @@
     <div class="navbar-start">
       <div class="navbar-item">
         <div class="field is-grouped">
-            <p class="control">
+<!--             <p class="control">
                 <a class="button is-dark" (click)="translate('fr')">
                   <span class="icon">
                     <fa-icon [icon]="faSignOutAlt"></fa-icon>
                   </span>
                   <span>Translate</span>
                 </a>
-              </p>
+              </p> -->
           <p class="control" *ngIf="!isSignedIn">
             <a class="button is-dark" routerLink="sign-up">
               <span class="icon">
