--- a/biscuits/src/main/biscuits-ui/src/app/kids/kids.component.html
+++ b/biscuits/src/main/biscuits-ui/src/app/kids/kids.component.html
@@ -6,8 +6,8 @@
           Kids
         </h1>
       </div>
-      <div class="row columns is-multiline">
-      <div class="column is-one-third is-four-fifths-mobile">
+      <div class="row columns is-multiline is-four-fifths-mobile is-two-third-tablet">
+      <div class="column is-one-third-desktop">
         <div class="card">
           <header class="card-header">
             <div class="card-header-title has-text-danger">
@@ -45,11 +45,13 @@
       </div>
     </div>
   </div>
-    <div class="row columns is-multiline">
-      <div class="column is-one-third is-four-fifths-mobile" *ngFor="let kid of kids">
+    <div class="row columns is-multiline is-four-fifths-mobile is-four-fifths-tablet">
+      <div class="column is-one-third-desktop" *ngFor="let kid of kids">
+          <div class="card large">
         <app-kid-details [kid]="kid"></app-kid-details>
-        <div class="button is-primary card-footer">
-        <button class="button is-primary card-footer-item" (click)="goToMissions(kid)"><span class="icon"><fa-icon [icon]="faArrowRight"></fa-icon></span><span>Go to missions!</span></button>
+        <div class="card-footer">
+        <a class="has-text-primary card-footer-item" (click)="goToMissions(kid)"><span class="icon"><fa-icon [icon]="faArrowRight"></fa-icon></span><span>Go to missions!</span></a>
+      </div>
       </div>
       </div>
     </div>
