--- a/src/main/biscuits-ui/src/app/missions/mission-details/mission-details.component.html
+++ b/src/main/biscuits-ui/src/app/missions/mission-details/mission-details.component.html
@@ -39,8 +39,8 @@
           <div class="control has-icons-left">
             <input type="text" class="input form-control" formControlName="action" value={{mission.action}} name="action"
             [ngClass]="{ 'is-invalid': submitted && f.action.errors }"/>
-            <span class="icon is-left has-text-primary">
-              <fa-icon [icon]="faUserSecret"></fa-icon>
+            <span class="icon is-left has-text-dark">
+              <fa-icon [icon]="faExclamationCircle"></fa-icon>
             </span>
           </div>
           <div *ngIf="submitted && f.action.errors" class="invalid-feedback">
@@ -52,8 +52,8 @@
           <div class="control has-icons-left">
             <input type="text" class="input form-control" formControlName="biscuits" value={{mission.biscuitsToEarn}} name="biscuits"
             [ngClass]="{ 'is-invalid': submitted && f.biscuits.errors }"/>
-            <span class="icon is-left has-text-primary">
-              <fa-icon [icon]="faUserSecret"></fa-icon>
+            <span class="icon is-left has-text-dark">
+              <fa-icon [icon]="faCookieBite"></fa-icon>
             </span>
           </div>
           <div *ngIf="submitted && f.biscuits.errors" class="invalid-feedback">
